# GalleryC_Course_Work

./: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui
